--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -405,7 +405,7 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Koleksi</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Keranjang</a></li>
+          <li class="nav-item"><a class="nav-link" href="keranjang.html">Keranjang</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Settingan</a></li>
         </ul>
         <div class="d-flex flex-column flex-lg-row align-items-lg-center gap-3 w-100 justify-content-lg-end mt-3 mt-lg-0">
@@ -456,7 +456,7 @@
     <div class="novel-container" id="scrollContainer">
 
       <!-- Novel Card 1-->
-      
+       <a href="detail-novel.html">
       <div class="novel-card">
         <div class="left-section">
           <img src="https://upload.wikimedia.org/wikipedia/id/b/bf/Harry_Potter_and_the_Sorcerer%27s_Stone.jpg" alt="The Great Gatsby" class="novel-cover">
@@ -481,12 +481,10 @@
           <p class="novel-desc">
             Masuki dunia sihir penuh petualangan dan misteri bersama Harry Potter di novel fantasi legendaris karya J.K. Rowling ini.
           </p>
-          <a href="detail-novel.html">
           <button class="btn-see-book">See The Book</button>
-           </a>
         </div>
       </div>
-      
+       </a>
 
        <!-- Novel Card 2-->
       <div class="novel-card">
