--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -405,7 +405,7 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Koleksi</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Keranjang</a></li>
+          <li class="nav-item"><a class="nav-link" href="keranjang.html">Keranjang</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Settingan</a></li>
         </ul>
         <div class="d-flex flex-column flex-lg-row align-items-lg-center gap-3 w-100 justify-content-lg-end mt-3 mt-lg-0">
@@ -456,16 +456,17 @@
     <div class="novel-container" id="scrollContainer">
 
       <!-- Novel Card 1-->
-       <a href="detail-novel.html">
       <div class="novel-card">
         <div class="left-section">
           <img src="https://upload.wikimedia.org/wikipedia/id/b/bf/Harry_Potter_and_the_Sorcerer%27s_Stone.jpg" alt="The Great Gatsby" class="novel-cover">
           <div class="cover-icons">
             <button class="icon-btn" title="Suka"><i class="fas fa-heart"></i></button>
+            <a href="keranjang.html">
             <button class="icon-btn cart-icon " title="Tambah ke Keranjang">
               <i class="fas fa-cart-plus"></i>
               <span class="tooltip-text">Tambah ke Keranjang</span>
             </button>
+            </a>
             <button class="icon-btn genre-icon">
               <i class="fas fa-tags"></i>
               <span class="tooltip-text">Lihat genre serupa</span>
@@ -481,10 +482,11 @@
           <p class="novel-desc">
             Masuki dunia sihir penuh petualangan dan misteri bersama Harry Potter di novel fantasi legendaris karya J.K. Rowling ini.
           </p>
-          <button class="btn-see-book">See The Book</button>
+          <a href="detail-novel.html">
+            <button class="btn-see-book">See The Book</button>
+          </a>        
         </div>
       </div>
-       </a>
 
        <!-- Novel Card 2-->
       <div class="novel-card">
