genre yang hilang

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -600,6 +600,8 @@
   </div>
 </section>
 
+<div th:replace="~{fragments/genre :: genreFragment}"></div>
+
   <!-- Footer -->
 <footer class="mt-5 py-4 bg-black text-center text-white border-top border-secondary">
   <div class="container">
