--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -159,7 +159,7 @@
           <a class="nav-link" href="#">Keranjang</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Settingan</a>
+          <a class="nav-link" href="aboutme.html">About Me</a>
         </li>
       </ul>
 
