--- a/src/main/resources/templates/keranjang.html
+++ b/src/main/resources/templates/keranjang.html
@@ -218,7 +218,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Koleksi</a></li>
           <li class="nav-item"><a class="nav-link active" href="#">Keranjang</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Settingan</a></li>
+          <li class="nav-item"><a class="nav-link" href="aboutme">About Me</a></li>
         </ul>
 
         <div class="d-flex flex-column flex-lg-row align-items-lg-center gap-3 w-100 justify-content-lg-end mt-3 mt-lg-0">
