--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -134,21 +134,21 @@
 <body>
 
   <div class="container">
-    <h1>:: about me</h1>
+    <h1>NOVELKU</h1>
     <div class="about">
-      <img src="https://i.pinimg.com/originals/61/4d/94/614d94f2e74fc98bfe5573192681fdcf.png" alt="profile-img">
-      <p>Hello! My name is Rimu but feel free to call me whatever you like. My given nicknames include Rimmu or Rimmy. I'm a chill introvert who enjoys drawing anime girls, watching shows, editing AMVs, and creating GFXs. I'm a soft soul, happy with my boyfriend, and a big fan of relaxing lo-fi music. I also love ramen and boba tea!</p>
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="profile-img">
+      <p>Novelku adalah platform digital yang menghadirkan berbagai koleksi novel terbaik karya penulis lokal dan internasional. Kami hadir untuk para pecinta sastra dan cerita, dari yang gemar membaca kisah cinta romantis, petualangan seru, hingga fantasi epik dan thriller yang menegangkan.</p>
     </div>
 
     <div class="card">
-      <img src="https://i.imgur.com/1.jpg" alt="Jeanne Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Jeanne Card">
       <div class="card-content">
-        <div class="card-title">JEANNE D'ARC — FALLEN MAIDEN</div>
+        <div class="card-title">Eka Verarina</div>
         <div class="details">
-          Element: Dark<br>
-          Race: Human<br>
-          Specialty: Saber<br>
-          Style: Attack
+          NIM: 24111814004<br>
+          Role: Tetua <br>
+          Raja Iblis<br>
+          Dit Tolongin Dit
         </div>
       </div>
     </div>
@@ -156,9 +156,9 @@
     <div class="card">
       <img src="https://i.imgur.com/2.jpg" alt="Zoe Card">
       <div class="card-content">
-        <div class="card-title">ZOEY — ARBITRATOR'S SUMMER HOLIDAY</div>
+        <div class="card-title">Prima Miftakhul Rahma</div>
         <div class="details">
-          Element: Dark<br>
+          NIM: 24111814005<br>
           Race: Primal Beast<br>
           Specialty: Saber<br>
           Style: Special
@@ -169,9 +169,9 @@
     <div class="card">
       <img src="https://i.imgur.com/3.jpg" alt="Narmaya Card">
       <div class="card-content">
-        <div class="card-title">NARMAYA — DARK ANGEL</div>
+        <div class="card-title">Jenar Aditiya Bagaskara</div>
         <div class="details">
-          Element: Dark<br>
+          NIM: 24111814093<br>
           Race: Draph<br>
           Specialty: Saber<br>
           Style: Attack
@@ -182,9 +182,9 @@
     <div class="card">
       <img src="https://i.imgur.com/4.jpg" alt="Djeeta Card">
       <div class="card-content">
-        <div class="card-title">DJEEETA — FLUTTERING SWORDSWOMAN</div>
+        <div class="card-title">Muhammad Dwi Saputra</div>
         <div class="details">
-          Element: Dark<br>
+          NIM: 24111814080<br>
           Race: Human<br>
           Specialty: Saber<br>
           Style: Attack
@@ -195,9 +195,9 @@
     <div class="card">
       <img src="https://i.imgur.com/5.jpg" alt="Syva Card">
       <div class="card-content">
-        <div class="card-title">SYVA — LOVE-CRAZED KNIGHT</div>
+        <div class="card-title">Farid Ade Novian</div>
         <div class="details">
-          Element: Dark<br>
+          NIM: 24111814140<br>
           Race: Human<br>
           Specialty: Saber<br>
           Style: Attack
@@ -208,9 +208,9 @@
  <div class="card">
       <img src="https://i.imgur.com/5.jpg" alt="Syva Card">
       <div class="card-content">
-        <div class="card-title">SYVA — LOVE-CRAZED KNIGHT</div>
+        <div class="card-title">Muhammad Dzacky Maulana Yahya</div>
         <div class="details">
-          Element: Dark<br>
+          NIM: 24111814127<br>
           Race: Human<br>
           Specialty: Saber<br>
           Style: Attack
@@ -221,9 +221,9 @@
      <div class="card">
       <img src="https://i.imgur.com/5.jpg" alt="Syva Card">
       <div class="card-content">
-        <div class="card-title">SYVA — LOVE-CRAZED KNIGHT</div>
+        <div class="card-title">Renza Alvianino</div>
         <div class="details">
-          Element: Dark<br>
+          NIM: 24111814011<br>
           Race: Human<br>
           Specialty: Saber<br>
           Style: Attack
