--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id" xmlns:th="http://www.thymeleaf.org"></html>
 <head>
   <meta charset="UTF-8">
   <title>About Me - Anime Style</title>
@@ -154,7 +154,7 @@
     </div>
 
     <div class="card">
-      <img src="https://i.imgur.com/2.jpg" alt="Zoe Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Zoe Card">
       <div class="card-content">
         <div class="card-title">Prima Miftakhul Rahma</div>
         <div class="details">
@@ -167,7 +167,7 @@
     </div>
 
     <div class="card">
-      <img src="https://i.imgur.com/3.jpg" alt="Narmaya Card">
+      <img th:src="@{asset/Dwi2.jpg}" alt="Narmaya Card">
       <div class="card-content">
         <div class="card-title">Jenar Aditiya Bagaskara</div>
         <div class="details">
@@ -180,7 +180,7 @@
     </div>
 
     <div class="card">
-      <img src="https://i.imgur.com/4.jpg" alt="Djeeta Card">
+      <img th:src="@{asset/Dwi.jpg}" alt="Djeeta Card">
       <div class="card-content">
         <div class="card-title">Muhammad Dwi Saputra</div>
         <div class="details">
@@ -193,7 +193,7 @@
     </div>
 
     <div class="card">
-      <img src="https://i.imgur.com/5.jpg" alt="Syva Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Syva Card">
       <div class="card-content">
         <div class="card-title">Farid Ade Novian</div>
         <div class="details">
@@ -206,7 +206,7 @@
     </div>
 
  <div class="card">
-      <img src="https://i.imgur.com/5.jpg" alt="Syva Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Syva Card">
       <div class="card-content">
         <div class="card-title">Muhammad Dzacky Maulana Yahya</div>
         <div class="details">
@@ -219,7 +219,7 @@
     </div>
 
      <div class="card">
-      <img src="https://i.imgur.com/5.jpg" alt="Syva Card">
+      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Syva Card">
       <div class="card-content">
         <div class="card-title">Renza Alvianino</div>
         <div class="details">
