--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="id" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Beranda - NOVELKU</title>
@@ -603,6 +603,8 @@
     </button>
   </div>
 </section>
+
+
 
   <!-- Footer -->
 <footer class="mt-5 py-4 bg-black text-center text-white border-top border-secondary">
