nambah foto pd about us

--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -193,7 +193,7 @@
     </div>
 
     <div class="card">
-      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Syva Card">
+      <img src=<img th:src="@{asset/Farid.jpeg}" alt="Djeeta Card">
       <div class="card-content">
         <div class="card-title">Farid Ade Novian</div>
         <div class="details">
