--- a/src/main/resources/templates/fragments/aboutus.html
+++ b/src/main/resources/templates/fragments/aboutus.html
@@ -154,14 +154,13 @@
     </div>
 
     <div class="card">
-      <img src="https://github.com/kaekka/Tugas-PBO-Sampe-UAS/blob/Novel-Web/src/main/resources/static/asset/dontol1.png?raw=true" alt="Zoe Card">
+      <img th:src="@{asset/rahma.jpg}" alt="Narmaya Card">
       <div class="card-content">
         <div class="card-title">Prima Miftakhul Rahma</div>
         <div class="details">
           NIM: 24111814005<br>
-          Race: Primal Beast<br>
-          Specialty: Saber<br>
-          Style: Special
+          <a href="https://github.com/PrimaRahma" class="text-primary me-2"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/rhma.taa?igsh=MWU2eTkzb2VqdnRxZw==" class="text-danger me-2"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
